метод getClientsByPassport возвращает теперь нескольких клиентов с одинаковым паспортом

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://192.168.1.84:3306/clients?serverTimezone=Europe/Moscow
-spring.datasource.username=timur
-spring.datasource.password=1978MyBirthday@
+#spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://192.168.1.84:3306/clients?serverTimezone=Europe/Moscow
+#spring.datasource.username=timur
+#spring.datasource.password=1978MyBirthday@
+
+spring.datasource.url=jdbc:mysql://192.168.1.161:3306/clients?serverTimezone=Europe/Moscow
+spring.datasource.username=ptv
+spring.datasource.password=1234
 
 #JPA logging
 logging.level.org.hibernate.SQL=DEBUG
@@ -10,3 +16,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+server.port=8086
