--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>ms-clients-mysql</finalName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
